# portfolio-voice-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  livekit.toml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  docker-publish.yml  pages.yml
agent/: config.py  emailer.py  guardrails.py  knowledge.py  main.py  summarizer.py  zara.py
backend/: server.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Background.jsx  HeroSection.jsx  StatusBadge.jsx  SummaryCard.jsx  VoiceInterface.jsx
frontend/src/hooks/: useVoiceSession.js
tests/: conftest.py  test_emailer.py  test_guardrails.py  test_summarizer.py
